Second try at adding commands.
Commands add and execute successfully. No support for complex commands yet.

--- a/Experimental_Voice/Experimental_Voice/Experimental_Voice.vbproj
+++ b/Experimental_Voice/Experimental_Voice/Experimental_Voice.vbproj
@@ -59,6 +59,7 @@
     <Import Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SpeechCommand.vb" />
     <Compile Include="Form1.vb">
       <SubType>Form</SubType>
     </Compile>
